# SegEvo

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: pathology_unet_milesial.md  pytorch_integration.md
examples/: minimal_logging.py  pytorch_unet_training.py
src/segevo/: __init__.py  _streamlit_app.py  artifacts.py  boundary_learning.py  cli.py  dashboard.py  demo.py  feature_space.py  logger.py  metrics.py  sampling.py
tests/: test_boundary_learning.py  test_dashboard_feature_space.py  test_dashboard_images.py  test_dashboard_readouts.py  test_demo.py  test_feature_space.py  test_logger.py  test_metrics.py  test_pytorch_example.py  test_sampling.py
